--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -2547,14 +2547,102 @@ simtropolis/33651-11241036-textures:
   packageId: 11241036/textures
   variantId: default
 
+simtropolis/33686-condominio-uriani:
+  packageId: davide1983it/condominio-uriani
+  variantId: default
+
+simtropolis/33687-edificio-matzla:
+  packageId: davide1983it/edificio-matzla
+  variantId: default
+
+simtropolis/33689-condominio-bottoli:
+  packageId: davide1983it/condominio-bottoli
+  variantId: default
+
+simtropolis/33700-villino-razionale-1:
+  packageId: davide1983it/villino-razionale-1
+  variantId: default
+
+simtropolis/33701-villino-razionale-2:
+  packageId: davide1983it/villino-razionale-2
+  variantId: default
+
 simtropolis/33702-vip-trees-as-props:
   packageId: vip/tree-props
+  variantId: default
+
+simtropolis/33705-condominio-plutarco:
+  packageId: davide1983it/condominio-plutarco
+  variantId: default
+
+simtropolis/33718-condominio-aristide:
+  packageId: davide1983it/condominio-aristide
+  variantId: default
+
+simtropolis/33720-condominio-giotto:
+  packageId: davide1983it/condominio-giotto
+  variantId: default
+
+simtropolis/33729-condominio-ponti:
+  packageId: davide1983it/condominio-ponti
+  variantId: default
+
+simtropolis/33731-condominio-colombo:
+  packageId: davide1983it/condominio-colombo
+  variantId: default
+
+simtropolis/33739-condominio-euripide:
+  packageId: davide1983it/condominio-euripide
   variantId: default
 
 simtropolis/33753-italian-collection-relots-direzione-compartimentale: null
 
 simtropolis/33761-dutch-bicyclepaths:
   packageId: dead-end/dutch-bicyclepaths
+  variantId: default
+
+simtropolis/33813-ica-supermarket:
+  packageId: davide1983it/ica-supermarket
+  variantId: default
+
+simtropolis/33817-torre-fara:
+  packageId: davide1983it/torre-fara
+  variantId: default
+
+simtropolis/33818-torre-530:
+  packageId: davide1983it/torre-530
+  variantId: default
+
+simtropolis/33819-condominio-michelangelo:
+  packageId: davide1983it/condominio-michelangelo
+  variantId: default
+
+simtropolis/33821-condominio-aleardi:
+  packageId: davide1983it/condominio-aleardi
+  variantId: default
+
+simtropolis/33824-torre-410:
+  packageId: davide1983it/torre-410
+  variantId: default
+
+simtropolis/33833-torre-237:
+  packageId: davide1983it/torre-237
+  variantId: default
+
+simtropolis/33835-hurmay-building:
+  packageId: davide1983it/hurmay-building
+  variantId: default
+
+simtropolis/33841-bellavista-residence:
+  packageId: davide1983it/condominio-bellavista
+  variantId: default
+
+simtropolis/33846-isuraki-building:
+  packageId: davide1983it/isuraki-building
+  variantId: default
+
+simtropolis/33872-torre-aran:
+  packageId: davide1983it/torre-aran
   variantId: default
 
 simtropolis/33889-seasonal-woods-2nd-iteration:
@@ -2564,12 +2652,88 @@ simtropolis/33889-seasonal-woods-2nd-iteration:
       variantId: evergreen
   variantId: default,evergreen
 
+simtropolis/33890-condominio-zurlani:
+  packageId: davide1983it/condominio-zurlani
+  variantId: default
+
+simtropolis/33895-condominio-burrini:
+  packageId: davide1983it/condominio-burrini
+  variantId: default
+
+simtropolis/33911-condominio-tubico:
+  packageId: davide1983it/condominio-tubico
+  variantId: default
+
+simtropolis/33921-condominio-bacro:
+  packageId: davide1983it/condominio-bacro
+  variantId: default
+
+simtropolis/33929-condominio-fusina:
+  packageId: davide1983it/condominio-fusina
+  variantId: default
+
+simtropolis/33943-condominio-alfieri:
+  packageId: davide1983it/condominio-alfieri
+  variantId: default
+
+simtropolis/33945-condominio-garroso:
+  packageId: davide1983it/condominio-garroso
+  variantId: default
+
+simtropolis/33948-sushi-restaurant:
+  packageId: davide1983it/sushi-restaurant
+  variantId: default
+
+simtropolis/33954-fuji-restaurant:
+  packageId: davide1983it/fuji-restaurant
+  variantId: sd
+
+simtropolis/33955-nara-okonomiyaki-restaurant:
+  packageId: davide1983it/nara-okonomiyaki
+  variantId: sd
+
+simtropolis/33957-villa-nagoya:
+  packageId: davide1983it/villa-nagoya
+  variantId: default
+
+simtropolis/33960-villa-takamatsu:
+  packageId: davide1983it/villa-takamatsu
+  variantId: default
+
+simtropolis/33963-pacoma-building:
+  packageId: davide1983it/pacoma-building
+  variantId: default
+
+simtropolis/33964-fuku-ramen-restaurant:
+  packageId: davide1983it/fuku-ramen
+  variantId: sd
+
 simtropolis/33965-girafe-maxis-fence-hd-replacement-mod:
   packageId: flann/girafe-maxis-fence-hd-replacement-mod
   variantId: default
 
+simtropolis/33970-apartaments-utsunomiya:
+  packageId: davide1983it/apartaments-utsunomiya
+  variantId: default
+
+simtropolis/33985-condominio-atlantia:
+  packageId: davide1983it/condominio-atlantia
+  variantId: default
+
+simtropolis/33990-condominio-bramante:
+  packageId: davide1983it/condominio-bramante
+  variantId: default
+
+simtropolis/33996-condominio-vergano:
+  packageId: davide1983it/condominio-vergano
+  variantId: default
+
 simtropolis/34010-hjorthagen-school:
   packageId: koumus/hjorthagen-school
+  variantId: default
+
+simtropolis/34016-himoto-tower:
+  packageId: davide1983it/himoto-tower
   variantId: default
 
 simtropolis/34021-2-commerce-street:
@@ -2608,7 +2772,7 @@ simtropolis/34079-villa-nashville:
 
 simtropolis/34081-villa-tucson:
   packageId: davide1983it/villa-tucson
-  variantId: v1
+  variantId: default
 
 simtropolis/34082-old-mediterranean-pack:
   packageId: wannglondon/old-mediterranean-pack
@@ -2642,7 +2806,7 @@ simtropolis/34089-villa-boston:
 
 simtropolis/34092-villa-topeka:
   packageId: davide1983it/villa-topeka
-  variantId: v1
+  variantId: default
 
 simtropolis/34096-villa-austin:
   packageId: davide1983it/villa-austin
@@ -2762,7 +2926,7 @@ simtropolis/34155-villa-richmond:
 
 simtropolis/34156-villa-cincinnati:
   packageId: davide1983it/villa-cincinnati
-  variantId: v1
+  variantId: default
 
 simtropolis/34157-villa-lincoln:
   packageId: davide1983it/villa-lincoln
@@ -2882,52 +3046,52 @@ simtropolis/34214-wanng-paris-pack-3-r:
       variantId: default
 
 simtropolis/34231-condominio-tubico-v2:
-  packageId: davide1983it/condominio-tubico
+  packageId: davide1983it/condominio-tubico-v2
   variantId: default
 
 simtropolis/34232-condominio-bellavista-2:
-  packageId: davide1983it/condominio-bellavista
+  packageId: davide1983it/condominio-bellavista-v2
   variantId: default
 
 simtropolis/34233-condominio-burrini-v2:
-  packageId: davide1983it/condominio-burrini
+  packageId: davide1983it/condominio-burrini-v2
   variantId: sd
 
 simtropolis/34234-condominio-aristide-v2:
-  packageId: davide1983it/condominio-aristide
+  packageId: davide1983it/condominio-aristide-v2
   variantId: sd
 
 simtropolis/34235-condominio-bramante-v2:
-  packageId: davide1983it/condominio-bramante
+  packageId: davide1983it/condominio-bramante-v2
   variantId: default
 
 simtropolis/34236-condominio-colombo-v2:
-  packageId: davide1983it/condominio-colombo
+  packageId: davide1983it/condominio-colombo-v2
   variantId: sd
 
 simtropolis/34237-condominio-euripide:
-  packageId: davide1983it/condominio-euripide
+  packageId: davide1983it/condominio-euripide-v2
   variantId: sd
 
 simtropolis/34238-torre-237:
-  packageId: davide1983it/torre-237
+  packageId: davide1983it/torre-237-v2
   variantId: default
 
 simtropolis/34241-condominio-atlantia-v2:
-  packageId: davide1983it/condominio-atlantia
+  packageId: davide1983it/condominio-atlantia-v2
   variantId: default
 
 simtropolis/34256-condominio-vergano-v2:
-  packageId: davide1983it/condominio-vergano
+  packageId: davide1983it/condominio-vergano-v2
   variantId: default
 
 simtropolis/34257-villa-topeka-v2:
-  packageId: davide1983it/villa-topeka
-  variantId: v2
+  packageId: davide1983it/villa-topeka-v2
+  variantId: sd
 
 simtropolis/34258-villa-tucson-v2:
-  packageId: davide1983it/villa-tucson
-  variantId: v2
+  packageId: davide1983it/villa-tucson-v2
+  variantId: default
 
 simtropolis/34259-villa-akron:
   packageId: davide1983it/villa-akron
@@ -2955,8 +3119,8 @@ simtropolis/34273-kk-transformer-lots-small:
   packageId: kloudkicker/small-transformers
 
 simtropolis/34276-villa-cincinnati-v2:
-  packageId: davide1983it/villa-cincinnati
-  variantId: v2
+  packageId: davide1983it/villa-cincinnati-v2
+  variantId: sd
 
 simtropolis/34277-villa-orange:
   packageId: davide1983it/villa-orange
@@ -3157,7 +3321,7 @@ simtropolis/34525-flann-building:
   superseded: simtropolis/34680-flann-building-2-hd
 
 simtropolis/34537-set-villa-hd-1:
-  collectionId: davide1983it/villas
+  collectionId: davide1983it/traditional-villas
   paths:
     Davide1983it - Villa Akron*:
       packageId: davide1983it/villa-akron
@@ -3193,7 +3357,7 @@ simtropolis/34537-set-villa-hd-1:
       packageId: davide1983it/villa-chattanooga
       variantId: hd
     Davide1983it - Villa Cincinnati*:
-      packageId: davide1983it/villa-cincinnati
+      packageId: davide1983it/villa-cincinnati-v2
       variantId: hd
     Davide1983it - Villa Corine Marie*:
       packageId: davide1983it/villa-corine-marie
@@ -3280,7 +3444,7 @@ simtropolis/34537-set-villa-hd-1:
       packageId: davide1983it/villa-savannah
       variantId: hd
     Davide1983it - Villa Topeka*:
-      packageId: davide1983it/villa-topeka
+      packageId: davide1983it/villa-topeka-v2
       variantId: hd
     Davide1983it - Villa Torrance*:
       packageId: davide1983it/villa-torrance
@@ -3326,19 +3490,19 @@ simtropolis/34567-condominio-set:
   collectionId: davide1983it/condominios
   paths:
     Davide1983it - Condominio Aristide*:
-      packageId: davide1983it/condominio-aristide
+      packageId: davide1983it/condominio-aristide-v2
       variantId: hd
     Davide1983it - Condominio Betulla*:
       packageId: davide1983it/condominio-betulla
       variantId: hd
     Davide1983it - Condominio Burrini*:
-      packageId: davide1983it/condominio-burrini
+      packageId: davide1983it/condominio-burrini-v2
       variantId: hd
     Davide1983it - Condominio Colombo*:
-      packageId: davide1983it/condominio-colombo
+      packageId: davide1983it/condominio-colombo-v2
       variantId: hd
     Davide1983it - Condominio Euripide*:
-      packageId: davide1983it/condominio-euripide
+      packageId: davide1983it/condominio-euripide-v2
       variantId: hd
     Davide1983it - Condominio Guccini*:
       packageId: davide1983it/condominio-guccini
@@ -3402,8 +3566,7 @@ simtropolis/34608-mediterranean-flats-2:
       variantId: default
 
 simtropolis/34610-space-1999-the-eagle:
-  packageId: davide1983it/space-1999-eagle
-  variantId: default
+  superseded: simtropolis/34972-davide-prop-v1
 
 simtropolis/34612-outdoor-set-v2:
   superseded: simtropolis/34972-davide-prop-v1
@@ -3806,16 +3969,16 @@ simtropolis/34972-davide-prop-v1:
   packageId: davide1983it/props-vol01
   paths:
     Davide1983it - Fuji Restaurant*:
-      packageId: davide1983it/japanese-restaurants
+      packageId: davide1983it/fuji-restaurant
       variantId: hd
     Davide1983it - Fuku Ramen*:
-      packageId: davide1983it/japanese-restaurants
+      packageId: davide1983it/fuku-ramen
       variantId: hd
     Davide1983it - Playground*.SC4Lot:
       packageId: davide1983it/playgrounds
       variantId: default
     Davide1983it - Restaurant Nara Okonomiyaki*:
-      packageId: davide1983it/japanese-restaurants
+      packageId: davide1983it/nara-okonomiyaki
       variantId: hd
   variantId: default
 
