--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -3199,6 +3199,8 @@ buildings:
     - wmp/the-bridges-of-shoreline-county
   1accc739:
     - wmp/the-bridges-of-shoreline-county
+  1b052559:
+    - jasoncw/rachel-de-queiroz
   1b9a135f:
     - madhatter106/midrise-office-pack-vol02
   1baa2c4c:
@@ -3821,6 +3823,8 @@ buildings:
     - wmp/the-bridges-of-shoreline-county
   3ae5bcaf:
     - pegasus/spam
+  3b068a1e:
+    - jasoncw/hathaway-tower
   3b5fcaa1:
     - madhatter106/midrise-office-pack-vol01
   3b5fddf8:
@@ -4483,6 +4487,8 @@ buildings:
     - mikeseith/multi-level-modular-garages
   5960c0eb:
     - mikeseith/multi-level-modular-garages
+  59c37fe3:
+    - jasoncw/guardian-building
   59cdcaec:
     - madhatter106/liquor-stores
   59cdcb32:
@@ -5712,6 +5718,8 @@ buildings:
     - madhatter106/naughty-nimby-pack-vol03
   9960bf4b:
     - mikeseith/multi-level-modular-garages
+  99b0f6e6:
+    - jasoncw/guardian-building
   99f86dc5:
     - murimk/bike-lots
   99f89062:
@@ -6286,6 +6294,8 @@ buildings:
     - mikeseith/multi-level-modular-garages
   b96465f3:
     - manchou/ville-vol01
+  b9c640ad:
+    - jasoncw/guardian-building
   b9cdcc6b:
     - madhatter106/liquor-stores
   b9cdcd2d:
@@ -8166,6 +8176,8 @@ lots:
     - manchou/ville-vol01
   198f529d:
     - pegasus/spam
+  19c3839a:
+    - jasoncw/guardian-building
   19cdd10e:
     - madhatter106/liquor-stores
   19d1e140:
@@ -8202,6 +8214,8 @@ lots:
     - wmp/the-bridges-of-shoreline-county
   1accc739:
     - wmp/the-bridges-of-shoreline-county
+  1b068b7e:
+    - jasoncw/hathaway-tower
   1b5fcc8f:
     - madhatter106/midrise-office-pack-vol01
   1b5fd835:
@@ -8500,6 +8514,8 @@ lots:
     - pclark06/towering-signs-vol01
   29a6e15a:
     - pclark06/towering-signs-vol01
+  29c64137:
+    - jasoncw/guardian-building
   2a2735a0:
     - maxis/base
   2a2868d5:
@@ -13326,6 +13342,8 @@ lots:
     - madhatter106/midrise-office-pack-vol01
   7aafae47:
     - madhatter106/midrise-office-pack-vol01
+  7b0525fb:
+    - jasoncw/rachel-de-queiroz
   7b5fce63:
     - madhatter106/midrise-office-pack-vol01
   7b5fd495:
@@ -14596,6 +14614,8 @@ lots:
     - madhatter106/laundromats-and-drycleaners
   9960bf4b:
     - mikeseith/multi-level-modular-garages
+  99b0f6e6:
+    - jasoncw/guardian-building
   99cdce9d:
     - madhatter106/liquor-stores
   99cdcff5:
@@ -38542,6 +38562,8 @@ models:
     - pclark06/mega-props-vol02
   2a829693:
     - pclark06/mega-props-vol02
+  2a83fc08:
+    - jasoncw/rachel-de-queiroz
   2a858a83:
     - pclark06/mega-props-vol02
   2a8813d5:
@@ -42713,6 +42735,8 @@ models:
     - jestarr/mega-props-vol07
   349415d3:
     - jestarr/mega-props-vol07
+  34957ef6:
+    - jasoncw/guardian-building
   3497b6c9:
     - jestarr/mega-props-vol07
   349d084f:
@@ -84773,6 +84797,8 @@ models:
     - pclark06/mega-props-vol02
   ea85896e:
     - pclark06/mega-props-vol02
+  ea86a64a:
+    - jasoncw/hathaway-tower
   ea880f18:
     - pclark06/mega-props-vol02
   ea9bb801:
