--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -3425,6 +3425,8 @@ buildings:
     - 11241036/seasonal-woods-2
   25b1ef3f:
     - madhatter106/midrise-office-pack-vol08
+  25ed448d:
+    - jasoncw/trier-tower
   275c0c91:
     - pegasus/spam
   '27832671':
@@ -4429,6 +4431,8 @@ buildings:
     - koonam/art-live-building
   5493edf5:
     - wannglondon/tulum-homes
+  '54958e41':
+    - jasoncw/994-vargas-avenue
   549ba969:
     - jestarr/allied-pickle-works
   54a0ed63:
@@ -5049,12 +5053,18 @@ buildings:
     - jestarr/moxie-bottling-company
   73e863c7:
     - wannglondon/los-angeles-home-pack-1
+  73f98a61:
+    - jasoncw/windsor-atlantica
+  73f98b6b:
+    - jasoncw/windsor-atlantica
   741714d3:
     - koonam/art-live-building
   7426a43d:
     - cococity/coco-hillstate-apartment
   7443f7d1:
     - cococity/coco-pyeonhansesang-apartment
+  74958f9e:
+    - jasoncw/994-vargas-avenue
   749b8360:
     - dolphin66/mega-props-vol03
   749b83ec:
@@ -5928,6 +5938,8 @@ buildings:
     - madhatter106/midrise-office-pack-vol07
   a480669a:
     - madhatter106/midrise-office-pack-vol07
+  a4958914:
+    - jasoncw/994-vargas-avenue
   a5221bd8:
     - 11241036/lot-foundations-and-retaining-walls
   a52255f8:
@@ -6239,6 +6251,8 @@ buildings:
     - jestarr/robertson-manufacturing
   b3c8dec8:
     - jestarr/central-coop-creamery
+  b3f98cde:
+    - jasoncw/windsor-atlantica
   b4171094:
     - koonam/art-live-building
   b426a240:
@@ -6257,6 +6271,8 @@ buildings:
     - koonam/fealds-theatre
   b534c5c3:
     - madhatter106/new-age-and-occult-pack-vol01
+  b53748b3:
+    - jasoncw/roosevelt-circle
   b6107934:
     - mattb325/batprops-cottages-ornee-vol01
   b64489b8:
@@ -6876,6 +6892,8 @@ buildings:
     - jestarr/altman-miller-machine-shop
   d5391049:
     - mgb204/convenience-stores
+  d5ed4215:
+    - jasoncw/trier-tower
   d60e1a1d:
     - mattb325/batprops-cottages-ornee-vol01
   d612115e:
@@ -7708,6 +7726,8 @@ lots:
     - madhatter106/midrise-office-pack-vol08
   05b74f51:
     - madhatter106/midrise-office-pack-vol08
+  05ed42b7:
+    - jasoncw/trier-tower
   068a5f9e:
     - 11241036/seasonal-woods-2
   073dc000:
@@ -8458,6 +8478,8 @@ lots:
     - madhatter106/midrise-office-pack-vol07
   2486d675:
     - madhatter106/midrise-office-pack-vol07
+  24958fbc:
+    - jasoncw/994-vargas-avenue
   24d5c22b:
     - dead-end/lapinkirkko-relot
   252034b6:
@@ -8486,6 +8508,8 @@ lots:
     - madhatter106/midrise-office-pack-vol08
   25b5b6ee:
     - madhatter106/midrise-office-pack-vol08
+  25ed448d:
+    - jasoncw/trier-tower
   '27832671':
     - 11241036/seasonal-woods-2
   278a3d53:
@@ -9441,6 +9465,8 @@ lots:
     - jestarr/moxie-bottling-company
   33e447a3:
     - 11241036/traffic-blocker-set
+  33f98ba2:
+    - jasoncw/windsor-atlantica
   3426a2a4:
     - cococity/coco-hillstate-apartment
   347423c9:
@@ -9794,6 +9820,8 @@ lots:
     - wannglondon/ancient-ampitheater
   43a07361:
     - pegasus/spam
+  43f98acb:
+    - jasoncw/windsor-atlantica
   443099b1:
     - jestarr/small-brick-factory
   44695a58:
@@ -14888,6 +14916,10 @@ lots:
     - madhatter106/midrise-office-pack-vol07
   a4884802:
     - jestarr/willis-nut-bolt
+  a4958914:
+    - jasoncw/994-vargas-avenue
+  a4958e9a:
+    - jasoncw/994-vargas-avenue
   a5221bd8:
     - 11241036/lot-foundations-and-retaining-walls
   a52255f8:
@@ -15202,12 +15234,16 @@ lots:
     - jestarr/robertson-manufacturing
   b356b4c6:
     - jasoncw/wade-patton-insurance
+  b3f98cde:
+    - jasoncw/windsor-atlantica
   b42cc621:
     - jestarr/fall-river-mill
   b4bba4b9:
     - jestarr/gravely-manufactoring
   b534ce6b:
     - madhatter106/new-age-and-occult-pack-vol01
+  b53748b3:
+    - jasoncw/roosevelt-circle
   b641c71a:
     - madhatter106/new-age-and-occult-pack-vol02
   b6436a3e:
@@ -23617,6 +23653,10 @@ models:
     - girafe/flora-pack
   01f9022e:
     - girafe/flora-pack
+  0200e353-0004:
+    - jasoncw/994-vargas-avenue
+  0200e353-0008:
+    - jasoncw/roosevelt-circle
   0201067a:
     - girafe/carpack
   02010ce5:
@@ -45052,6 +45092,8 @@ models:
     - girafe/flora-pack
   434d217f-2215:
     - robdragon/props-vol01
+  4374c98c:
+    - jasoncw/windsor-atlantica
   43883af4-575a:
     - robdragon/props-vol01
   442d859f:
@@ -88707,6 +88749,8 @@ models:
     - lbt/mega-props-vol01
   f54efa0a:
     - jestarr/mega-props-vol07
+  f55dce2b-0014:
+    - jasoncw/trier-tower
   f5663799:
     - simgoober/models-high-tech
   f5692ccc:
