--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "glob": "10.4.1",
     "i18next": "23.11.5",
     "immutability-helper": "3.1.1",
+    "ini": "^5.0.0",
     "isomorphic-git": "1.25.10",
     "js-yaml": "4.1.0",
     "notistack": "3.0.1",
@@ -68,6 +69,7 @@
     "@joplin/turndown-plugin-gfm": "1.0.55",
     "@types/content-disposition": "0.5.8",
     "@types/escape-html": "1.0.4",
+    "@types/ini": "^4.1.1",
     "@types/js-yaml": "4.0.9",
     "@types/node": "20.17.6",
     "@types/react": "18.2.48",
